[XForms] Do not dispatch events on form load. Bug 329633. r=aaronr+smaug